Revert "minior spacing issues fixed" "revert minor spacing issues"
This reverts commit 46b444fed08d2ec6e1c0bfcbfc2e9333461e1766.

--- a/src/components/Experiences.css
+++ b/src/components/Experiences.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-bottom:20px;
 }
 
 .exp-section h3 {
@@ -67,7 +66,6 @@
     display: flex;
     flex-direction: column;
     gap: 32px;
-    margin-bottom: 10px;
 }
 
 .exp-item {
